Fixes for bugs seen on mobile devices

--- a/src/Website/assets/styles/main.scss
+++ b/src/Website/assets/styles/main.scss
@@ -1,12 +1,3 @@
-
-#icons {
-    position: fixed;
-    top:50%;
-    left:50%;
-    margin: -300px 0 0 -400px;
-    z-index: 100;
-}
-
 $font: 'Raleway', sans-serif;
 $main-color: #0976BB;
 $amazon: #e4b311;
@@ -18,12 +9,20 @@ $footer-color: #1B1B1B;
 
 body {
     font-family: $font;
-    overflow-x: hidden !important;
 }
 
 img {
     max-height: 100%;
     max-width: 100%;
+}
+
+.row {
+    margin-left: 0px;
+    margin-right: 0px;
+}
+
+.section1-text > ul> li  {
+    text-align: left;
 }
 
 // ------- HEADER -------- //
@@ -118,6 +117,11 @@ img {
 }
 
 .section1-text {
+    padding-left: 3%;
+    padding-right: 3%;
+}
+
+.section1-text-footer {
     padding-left: 3%;
     padding-right: 3%;
 }
@@ -724,6 +728,8 @@ li a {
     }
     
     .above-header-CTA {
+        width: 100%;
+        background: $main-color;
         height: 50px;
     }
     
@@ -825,6 +831,8 @@ li a {
     
     .above-header-CTA {
         height: 50px;
+        width: 100%;
+        background: $main-color;
     }
     
     // ------- ABOVE HEADER SECTION ------- //
